tdf#86374 DOCX import: fix btLr text table direction without <w:cantSplit/>

Commit 0208ead70a9412ccd554fcef3e9308f8ca17037b (DOCX import: improve
btLr table cell support, 2013-02-22) made any table row that has at
least one btLr cell fixed height. This causes problems in case a table
has a minimal height with lots of content, where the fixed height gives
wrong layout, but the minimal height is correct.

Fix the problem by only making the row fixed height if <w:cantSplit/> is
set (as seen in the old bugdoc), and revert to setting the height type
to minimal in any other case.

Change-Id: Ibaf91f542e64e5caa7904df97eb6eb52618e0023